--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />link
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="bio.css" rel="stylesheet">  
   <title>J.K.Rowling</title>
 
